--- a/MySQL2JavaCLS/My Project/Resources.resx
+++ b/MySQL2JavaCLS/My Project/Resources.resx
@@ -118,7 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="MySQL2JAVACLS_Header" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\JAVAforMYSQL_Header.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="JAVAforMYSQL_ClassConstructor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\JAVAforMYSQL_ClassConstructor.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-874</value>
+  </data>
+  <data name="JAVAforMYSQL_ClassHeader" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\JAVAforMYSQL_ClassHeader.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-874</value>
+  </data>
+  <data name="JAVAforMYSQL_MySQLDBConnector" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\JAVAforMYSQL_MySQLDBConnector.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-874</value>
   </data>
 </root>
