--- a/MySQL2JavaCLS/frmMain.resx
+++ b/MySQL2JavaCLS/frmMain.resx
@@ -1772,6 +1772,18 @@
         NCDyPwB30K6gJdKprAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnChangeFont.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAFkAAABZAaqdqYYAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABL0lEQVQ4T2Noamra0tLSUvI7stDjf3jBf9Jw/neG5ubmzQ0NDSL/wwoCsCvCj0EGbCfKAJeE//+d
+        4///dwXSAVlwcVwGHPkfWqgLFIuEi7kk/Pvvm2r63zet579r4t//gdkIA4C4+E9EYSBU8df/0bl8////
+        Z/gfUeCAYgBIDIS9U7v/uyX9/++XgeSCgAIBsCsi8s3hCnEZEBrK9t8rtfm/d1oVyIBlQAME4JLIGJcB
+        SBhsQGdnJy82SaINALpAAZsksQasBiakWKAhTBgKiDQAEohYJAeDAXnORBkAxMXYwyC/HG6Aa+L//76Z
+        9uhqQAasb2trE0aRCMvvA2q6CMT/4Ab4pINc8R+YAr8AE1AL3ABgDOwAGlKK4oLwgh1wjcg4LB+SkbxT
+        l0DU/mcAAGeqopZpCAOdAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIAD2BwAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAB71J
