--- a/MySQL2JavaCLS/My Project/Resources.resx
+++ b/MySQL2JavaCLS/My Project/Resources.resx
@@ -127,6 +127,9 @@
   <data name="JAVAforMYSQL_ClassProperties" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\JAVAforMYSQL_ClassProperties.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="JAVAforMYSQL_Credits" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\javaformysql_credits.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="JAVAforMYSQL_MySQLDBConnector" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\JAVAforMYSQL_MySQLDBConnector.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-874</value>
   </data>
