--- a/MySQL2JavaCLS/My Project/Resources.resx
+++ b/MySQL2JavaCLS/My Project/Resources.resx
@@ -133,6 +133,9 @@
   <data name="JAVAforMYSQL_EndCredits" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\JAVAforMYSQL_EndCredits.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="JAVAforMYSQL_MySQLDatabaseClass" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\JAVAforMYSQL_MySQLDatabaseClass.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-874</value>
+  </data>
   <data name="JAVAforMYSQL_MySQLDBConnector" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\JAVAforMYSQL_MySQLDBConnector.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-874</value>
   </data>
